Bugfix - fixed element positioning on tablet and desktop.

--- a/src/components/HeaderSection.css
+++ b/src/components/HeaderSection.css
@@ -1,8 +1,8 @@
-.header-container {
+/* .header-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 auto; /* This will center the element horizontally */
+  margin: 0 auto;
   background-color: #275868;
 }
 
@@ -45,6 +45,60 @@
   margin-bottom: 32px;
   width: 220px;
 }
+*/
+
+.header-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+  background-color: #ffffff;
+  padding: 64px 16px;
+  gap: 32px;
+}
+
+.header-img {
+  /* display: block; */
+  height: 150px;
+  width: 150px;
+  /* object-fit: cover; */
+  border-radius: 75px;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; */
+}
+
+.header-title-name {
+  font-size: 16px;
+  margin: 30px 0 0 0;
+}
+
+.header-title-title {
+  font-size: 27px;
+  margin: 0 0 30px 0;
+  color: #000000;
+}
+
+.header-text {
+  font-size: 16px;
+}
+
+.arrow-container {
+  background-color: black;
+  padding: 0 16px 64px 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: 0;
+  animation: arrowJump 1s infinite;
+}
+
+.arrow-icon {
+  /* margin-bottom: 32px; */
+  width: 220px;
+}
 
 @keyframes arrowJump {
   0%,
@@ -53,5 +107,46 @@
   }
   50% {
     transform: translateY(-20px); /* Move up by 20px */
+  }
+}
+
+/* Media Queries for tablet*/
+@media screen and (min-width: 667px) {
+  .header-container {
+    /* display: grid;
+    grid-template-columns: repeat(3);
+    grid-template-rows: repeat(2);
+    padding: 100px 30px 200px 30px; */
+    display: grid;
+    padding: 128px 32px 138px;
+    grid-template-columns: 1fr 430px;
+    grid-template-rows: auto;
+  }
+
+  .header-image-container {
+    grid-row: 2;
+  }
+
+  .header-title {
+    grid-column: 1 / span 2;
+    grid-row: 1;
+  }
+
+  .header-title-title {
+    font-size: 55px;
+  }
+
+  .header-text {
+    grid-row: 2;
+    grid-column: span 2;
+    display: flex;
+    align-items: center;
+  }
+}
+
+/* Media Queries for desktop */
+@media screen and (min-width: 1024px) {
+  .header-container {
+    padding: 100px 200px 250px 200px;
   }
 }
